<resources>
    <string name="app_name">Photo Blog</string>
    <string name="password_hint">Password...</string>
    <string name="email_hint">Your Email</string>
    <string name="Login_Logo">Login Logo Page</string>
    <string name="Login_Button_text">Login to Account</string>
    <string name="New_account_button">Need a new Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_settings_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
</resources>
